[package]
name = "router-hello"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
hyper = { version = "0.14", features = ["full"] }
askama = "0.12.1"
clap = { version = "4.4.7", features = ["derive"] }
rustyline = "12.0.0"
