[package]
name = "router-hello"
version = "0.2.1"
edition = "2021"

license = "Apache-2.0 OR MPL-2.0"
readme = "README.md"
repository = "https://github.com/metastable-void/rv128"
description = "Tiny HTTP server which displays a router's information"
homepage = "https://github.com/metastable-void/rv128"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
hyper = { version = "0.14", features = ["full"] }
askama = "0.12.1"
clap = { version = "4.4.7", features = ["derive"] }
rustyline = "12.0.0"
